--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
-  text-align: center;
+  display: flex;
+  height: 100vh;
+  /* 1, 3 */
+  flex-direction: column;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 8vmin;
   pointer-events: none;
 }
 
@@ -14,14 +17,20 @@
 }
 
 .App-header {
+  /* min-height: 5vh; */
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  flex: 0 0 auto;
+}
+
+.App-header h1 {
+  font-size: 18px;
+  font-family: monospace;
+  font-weight: 100;
 }
 
 .App-link {
@@ -36,4 +45,47 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-body {
+  flex: 1 0 auto;
+  padding: 20px;
+}
+
+.App-footer {
+  flex-shrink: 0;
+  /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
+  padding: 10px;
+  background-color: #f1f1f1;
+  text-align: center;
+}
+
+.App-footer .links {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.App-footer .links a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  font-weight: 100;
+  font-family: monospace;
+  font-size: 14px;
+  color: #000
+}
+
+.App-footer .links img {
+  margin-right: 5px;
+}
+
+button {
+  font-size: 18px;
+  padding: 5px 15px 5px 15px;
+  margin-right: 10px;
+}
+
+span {
+  font-style: italic;
+  font-size: small;
 }
